# boovcraft

./: .gitignore  CLAUDE.md  README.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
parser/: DATA.md  package-lock.json  package.json  parse.js
parser/test/: parse.test.js
processor/: DATA.md  analyze.py  entity_names.json  pyproject.toml
processor/tests/: conftest.py  test_cli.py  test_entity_names.py  test_fixture_facts.py  test_output_shape.py
processor/tools/: build_entity_names.py
sample_replays/: base_1.w3g  base_2.w3g
specs/001-replay-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-replay-parser/checklists/: requirements.md
specs/001-replay-parser/contracts/: output-shape.md  parser-cli.md
specs/002-replay-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-replay-analyzer/checklists/: requirements.md
specs/002-replay-analyzer/contracts/: analyzer-cli.md  mapping-shape.md  output-shape.md
specs/003-replay-visualizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-replay-visualizer/checklists/: requirements.md
specs/003-replay-visualizer/contracts/: input-contract.md  ui-contract.md
visualizer/: DATA.md  index.html  styles.css  visualizer.js
